--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "joi": "^17.6.0",
     "mongoose": "^6.4.4",
     "redis": "^4.2.0"
   }
